# tree-sitter-coconut

./: Cargo.toml  LICENSE  README.md  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
queries/: highlights.scm
src/: grammar.json  node-types.json  scanner.c
test/corpus/: definitions.txt  operators.txt
test/highlight/: keywords.coco  pattern_matching.coco
