[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-coconut"
description = "Coconut grammar for tree-sitter"
version = "0.23.2"
keywords = ["incremental", "parsing", "tree-sitter", "python", "coconut"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "Anna Montare", email = "aam141@case.edu" },
  { name = "Rachael Sexton", email = "gh@rtbs.dev" }
]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/annamontare/tree-sitter-coconut"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
